<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vier Gewinnt</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_field">FieldActivity</string>
    <string name="put">Put</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="start_game">Start Game</string>
    <string name="title_activity_match">MatchActivity</string>
    <string name="sign_in_text">Come on login, dear sir.</string>
    <string name="signed_in_text">You are signed in, kind sir.</string>
    <string name="achievements">Achievements</string>
 	<string name="leaderboards">Leaderboards</string>
 	<string name="sign_out">Sign Out</string>
 	<string name="not_logged_in">You are not logged in.</string>
    <string name="invitation_box">Invitation Box</string>
    <string name="invite_players">Invite Players</string>
    <string name="quick_game">Quick Game</string>
    
    
</resources>
